# pyRawRoom

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  TODO.md  plan.md  pyproject.toml  pyraw_batch.py  pyrawroom_gui.py  pyrawroom_pyside.py  requirements.txt  task.md
.agent/: instructions.md
.agent/workflows/: pr.md
.github/workflows/: ci.yaml
scripts/: README.md  download_release.py  generate_icons.py  install-pynegative.bat  install-pynegative.sh
src/pynegative/: __init__.py  cli.py  core.py  styles.qss  ui.py
src/pynegative/ui/: __init__.py  carouselmanager.py  editingcontrols.py  editor.py  export_tab.py  exportgallerymanager.py  exportprocessor.py  exportsettingsmanager.py  gallery.py  imageprocessing.py  loaders.py  main_window.py  renamepreviewdialog.py  renamesettingsmanager.py  settingsmanager.py  undomanager.py
src/pynegative/ui/widgets/: __init__.py  carouseldelegate.py  collapsiblesection.py  combobox.py  comparisonoverlay.py  crop_item.py  galleryitemdelegate.py  gallerylistwidget.py  histogram.py  horizontallist.py  resetableslider.py  starrating.py  toast.py  zoomablegraphicsview.py  zoomcontrols.py
src/pyrawroom/: __init__.py  cli.py  core.py  styles.qss  ui.py
tests/: test_core.py  test_image_io_and_processing.py  test_sidecar_management.py  test_starrating_widget.py  test_tone_mapping.py
tests/core/: test_dehaze.py  test_image_io_and_processing.py  test_sidecar_management.py  test_tone_mapping.py
tests/scripts/: test_download_release.py
tests/ui/: test_editor_preview_rating.py  test_export_open_folder.py  test_gallery_sorting.py  test_sharpening_defaults.py
tests/ui/widgets/: test_carouseldelegate.py  test_collapsiblesection.py  test_combobox.py  test_crop_item_rotation.py  test_galleryitemdelegate.py  test_gallerylistwidget.py  test_histogram_widget.py  test_horizontallist.py  test_resetableslider.py  test_starrating_widget.py  test_toast_widget.py  test_zoomablegraphicsview.py  test_zoomcontrols.py
