[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pynegative"
version = "0.1.3"
 authors = [
   { name="Lucas Hutchinson" },
 ]
description = "A simple RAW image processor using rawpy and Pillow"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "Pillow",
    "pillow-heif",
    "rawpy",
    "PySide6",
    "opencv-python",
    "opencv-contrib-python>=4.13.0.90",
]

[dependency-groups]
lint = [
    "ruff",
]

test = [
    "pytest",
    "pytest-qt",
]

[project.gui-scripts]
pynegative = "pynegative.ui:main"

[tool.setuptools.packages.find]
where = ["src"]
